<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen_gradient"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/ds_screen_horizontal_padding">

        <TextView
            android:id="@+id/tv_page_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search_page_header"
            android:textAppearance="@style/TextAppearance.FlightTracker.Display"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_page_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ds_space_xs"
            android:text="@string/search_page_subtitle"
            android:textAppearance="@style/TextAppearance.FlightTracker.Caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_page_title" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_search"
            style="@style/Widget.FlightTracker.Card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ds_space_md"
            android:layout_marginBottom="@dimen/ds_space_lg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_page_subtitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/ds_card_inner_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/ds_space_lg"
                    android:text="@string/search_title"
                    android:textAppearance="@style/TextAppearance.FlightTracker.Headline" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/ds_space_md">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_origin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_origin_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/ds_space_md">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_destination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_destination_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/ds_space_md">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_date_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkbox_direct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/ds_space_xl"
                    android:text="@string/search_direct_only"
                    android:textAppearance="@style/TextAppearance.FlightTracker.Subtitle" />

                <Button
                    android:id="@+id/btn_find"
                    style="@style/Widget.FlightTracker.Button.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_find" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_result"
            style="@style/Widget.FlightTracker.Card.Low"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ds_space_xs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_search">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/ds_space_lg">

                <TextView
                    android:id="@+id/tv_result_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_result_title"
                    android:textAppearance="@style/TextAppearance.FlightTracker.Title" />

                <TextView
                    android:id="@+id/tv_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ds_space_sm"
                    android:text="@string/search_result_placeholder"
                    android:textAppearance="@style/TextAppearance.FlightTracker.BodySecondary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_to_favorites"
                    style="@style/Widget.FlightTracker.Button.Outlined.Material"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ds_space_md"
                    android:text="@string/search_add_to_favorites"
                    android:visibility="gone" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_history_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ds_space_lg"
            android:text="@string/search_history_title"
            android:textAppearance="@style/TextAppearance.FlightTracker.Title"
            app:layout_constraintEnd_toStartOf="@id/btn_clear_history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_insights" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_insights"
            style="@style/Widget.FlightTracker.Card.Low"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ds_space_lg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_result">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/ds_space_lg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_insights_title"
                    android:textAppearance="@style/TextAppearance.FlightTracker.TitleSmall" />

                <TextView
                    android:id="@+id/tv_route_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ds_space_xs"
                    android:text="@string/search_insights_route_placeholder"
                    android:textAppearance="@style/TextAppearance.FlightTracker.CaptionTiny" />

                <com.bapinaev.flighttracker.ui.custom.RouteTimelineView
                    android:id="@+id/route_timeline"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginTop="@dimen/ds_space_sm" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clear_history"
            style="@style/Widget.FlightTracker.Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_history_clear"
            app:layout_constraintBottom_toBottomOf="@id/tv_history_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_history_title" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chips_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ds_space_sm"
            app:chipSpacingHorizontal="@dimen/ds_space_sm"
            app:chipSpacingVertical="@dimen/ds_space_sm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_history_title"
            app:singleLine="false" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
